# pyzeta

./: .gitignore  LICENSE  README.md  example.py  setup.cfg
src/pyzeta/: __init__.py  __main__.py  constants.py  instructions.py  utils.py
src/pyzeta/idl/: zeta.json
src/pyzeta/types/: order_type.py  side.py
tests/: example.py
