[metadata]
name = pyzeta
version = 0.1.0
description = Python SDK to interact with Zeta
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NobleMathews/pyzeta
author = Noble Saji Mathews
author_email = elbonleon@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
install_requires =
    anchorpy==0.10.0
    solana==0.25.1
    python-dotenv==0.21.0
    loguru==0.6.0
python_requires = >=3.7
package_dir = =src

[options.packages.find]
where = ./src

[options.entry_points]
console_scripts =
    pyzeta=pyzeta.sdk:test

[options.extras_require]
dev =
    black
    isort
    mypy
    pytest
    pytest-cov
    tox

[options.package_data]
pyzeta =
	idl/zeta.json

[tool:pytest]
addopts = --cov --cov-report=term-missing
